--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
+    "@payloadcms/db-postgres": "beta",
     "@payloadcms/next": "beta",
     "@payloadcms/plugin-cloud": "beta",
     "@payloadcms/richtext-lexical": "beta",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
+    "grommet": "^2.39.0",
+    "grommet-icons": "^4.12.1",
     "next": "15.0.0-canary.53",
     "payload": "beta",
     "react": "^19.0.0-rc-6230622a1a-20240610",
     "react-dom": "^19.0.0-rc-6230622a1a-20240610",
     "sharp": "0.32.6",
-    "@payloadcms/db-postgres": "beta"
+    "styled-components": "^6.1.12",
+    "styled-icons": "^10.47.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
